# voxers

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  renderer.rs
src/app/: block.rs  chunk.rs  mesh.rs  player.rs  voxel.rs  worldgen.rs
src/app/mesh/: fast.rs  greedy.rs
src/app/player/: controller.rs
src/renderer/: cached.rs  camera.rs  light.rs  mesh.rs  projection.rs  texture.rs  vertex.rs
src/shaders/: common.wgsl  frag.wgsl  vert.wgsl
