[package]
name = "voxers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.1"
fxhash = "0.2.1"
image = "0.25.1"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
vek = "0.16.1"
wgpu = "0.19.1"
winit = "0.29.10"
